; ModuleID = '/home/carl/AnghaBench/linux/drivers/media/radio/extr_saa7706h.c_saa7706h_set_reg16_err.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/media/radio/extr_saa7706h.c_saa7706h_set_reg16_err.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.v4l2_subdev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.v4l2_subdev*, i32, i32, i32*)* @saa7706h_set_reg16_err to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @saa7706h_set_reg16_err(%struct.v4l2_subdev* %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.v4l2_subdev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.v4l2_subdev* %0, %struct.v4l2_subdev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %9 = load i32*, i32** %8, align 8
  %10 = load i32, i32* %9, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %15

12:                                               ; preds = %4
  %13 = load i32*, i32** %8, align 8
  %14 = load i32, i32* %13, align 4
  br label %20

15:                                               ; preds = %4
  %16 = load %struct.v4l2_subdev*, %struct.v4l2_subdev** %5, align 8
  %17 = load i32, i32* %6, align 4
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @saa7706h_set_reg16(%struct.v4l2_subdev* %16, i32 %17, i32 %18)
  br label %20

20:                                               ; preds = %15, %12
  %21 = phi i32 [ %14, %12 ], [ %19, %15 ]
  ret i32 %21
}

declare dso_local i32 @saa7706h_set_reg16(%struct.v4l2_subdev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
